# silver_platter

./: .gitignore  01_quant_auto_trading_requirements_definition_20260522.md  02_overall_system_architecture_design_20260522.md  03_domain_data_model_erd_draft_20260522.md  04_goldilocks_initial_schema_design_20260522.md  05_data_collection_pipeline_detail_design_20260522.md  06_trade_ledger_fifo_realized_pnl_design_20260522.md  07_overseas_stock_capital_gains_tax_design_20260522.md  08_client_realtime_test_virtual_account_simulation_design_20260522.md  09_disclosure_event_impact_prediction_design_20260522.md  10_risk_engine_detailed_requirements_20260522.md  11_business_group_classification_group_risk_design_20260522.md  12_global_headline_collection_event_risk_design_20260522.md  13_global_risk_event_alert_client_exposure_design_20260522.md  14_user_defined_security_ml_analysis_prediction_management_design_20260522.md  15_security_volatility_risk_index_formula_chart_design_20260522.md  16_business_group_volatility_comparison_chart_design_20260522.md  17_order_ticket_realtime_price_range_pretrade_analysis_design_20260522.md  18_backtest_scenario_test_detailed_requirements_20260522.md  19_web_ui_screen_inventory_mobile_core_design_20260522.md  20_docker_compose_development_environment_design_20260522.md  21_broker_api_integration_order_state_machine_design_20260522.md  22_db_backup_restore_policy_operations_procedure_20260522.md  23_verification_operations_checklist_20260522.md  24_open_decisions_resolution_register_20260522.md  (+10 more)
silver_platter_app/: .env.example  .gitignore  (+3 more)
(+128 files in other folders)
